--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
