--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ cache:
     - node_modules
 script:
   - npm test
-env:
-  - CI=true
+# env:
+#   - CI=true
 
 before_deploy:
   - npm install netlify-cli -g
