--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ cache:
     - node_modules
 script:
   - npm test
+# env:
+#   - CI=true
 
 before_deploy:
   - npm install netlify-cli -g
+  - unset CI
   - npm run build
 
 deploy:
