--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^4.4.5",
+    "react-router": "^4.1.1",
+    "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
-    "redux-thunk": "^2.1.0",
-    "react-scripts": "0.9.5"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
