--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^4.4.5",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
