--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
