--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
+    "react-addons-test-utils": "^15.5.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
