--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.5.4",
+    "react-cookie": "^2.0.7",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
     "react-redux": "^4.4.5",
