--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-thunk": "^2.1.0",
-    "universal-cookie": "^2.0.7"
+    "universal-cookie": "^2.0.7",
+    "leaflet": "0.7.7",
+    "react-leaflet": "0.11.7",
+    "react-leaflet-control": "1.2.0"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
