--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "axios": "^0.15.3",
     "immutable": "^3.8.1",
+    "leaflet": "0.7.7",
     "moment-timezone": "^0.5.13",
+    "node-geocoder": "^3.16.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.5.4",
     "react-cookie": "^2.0.7",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
+    "react-leaflet": "0.11.7",
+    "react-leaflet-control": "1.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -19,10 +23,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-thunk": "^2.1.0",
-    "universal-cookie": "^2.0.7",
-    "leaflet": "0.7.7",
-    "react-leaflet": "0.11.7",
-    "react-leaflet-control": "1.2.0"
+    "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
