--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
     "react-leaflet": "0.11.7",
-    "react-leaflet-control": "1.2.0",
+    "react-leaflet-control": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
