--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.15.3",
     "immutable": "^3.8.1",
     "leaflet": "0.7.7",
+    "material-ui": "^0.18.1",
     "moment-timezone": "^0.5.13",
     "node-geocoder": "^3.16.0",
     "passport": "^0.3.2",
@@ -20,8 +21,10 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
+    "redux-form-material-ui": "^4.2.0",
     "redux-thunk": "^2.1.0",
     "universal-cookie": "^2.0.7"
   },
